--- a/examples/pt_indexed_epic.ipynb
+++ b/examples/pt_indexed_epic.ipynb
@@ -63,14 +63,13 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "config file not found: config\n",
-      "[2021-03-12 07:31:37,496][onir_pt][INFO] using cached checkpoint: /home/sean/data/onir/model_checkpoints/66273681b3ce24117dfda4b8ff58bad3\n"
+      "[2021-03-12 10:12:32,206][onir_pt][INFO] using cached checkpoint: /home/sean/data/onir/model_checkpoints/66273681b3ce24117dfda4b8ff58bad3\n"
      ]
     }
    ],
    "source": [
     "# Load a version of EPIC trained on the MS-MARCO dataset\n",
-    "lazy_epic = onir_pt.reranker.from_checkpoint('https://macavaney.us/epic.msmarco.tar.gz')"
+    "lazy_epic = onir_pt.reranker.from_checkpoint('https://macavaney.us/epic.msmarco.tar.gz', expected_md5=\"2f6a16be1a6a63aab1e8fed55521a4db\")"
    ]
   },
   {
@@ -112,7 +111,7 @@
     }
    ],
    "source": [
-    "# Build an inverted index for Vaswani with pyterrier\n",
+    "# Build an inverted index for TREC COIVID with pyterrier\n",
     "pt_index_path = './terrier_cord19'\n",
     "if not os.path.exists(pt_index_path + '/data.properties'):\n",
     "    indexer = pt.index.IterDictIndexer(pt_index_path)\n",
