--- a/examples/pt_indexed_epic.ipynb
+++ b/examples/pt_indexed_epic.ipynb
@@ -421,7 +421,7 @@
    "source": [
     "That was much faster -- 721ms faster than the lazy version! And it's only 15ms slower than DPH (which it uses as a first-stage ranker).\n",
     "\n",
-    "There is a slight change in effectivness. This is because document vectors are pruned when indexed.\n",
+    "There is a slight change in effectiveness. This is because document vectors are pruned when indexed.\n",
     "\n",
     "Also notice how the indexed re-ranker does not need the document text anymore; that also saves some time."
    ]
